# helloWorld

./: README.md
angular2/: README.md
angular2/2_plainWithLiteServer/: .gitignore  bs-config.json  config.js  index.html  package.json
angular2/2_plainWithLiteServer/app/: main.js  main.ts
angular2/3_fullQuickStart/: .gitignore
angular2/3_fullQuickStart/app/: app.component.ts
angular2/4_onceUponATime/: .gitignore  README.md  index.html  package.json  tsconfig.json
angular2/4_onceUponATime/app/: app.component.js  app.component.ts  hero-detail.component.js  hero-detail.component.ts
angular2/4_onceUponATime/appInclude/: system-config.js
haskell/: README.md
haskell/haskell/miscTestPrograms/: fac.hs  hello.hs  listDirs.hs  parallel.hs
haskell/haskell/seanHess01-gettingStarted/: LICENSE  readme.txt  seanHess01-gettingStarted.cabal
haskell/haskell/seanHess01-gettingStarted/src/: Main.hs
haskell/haskell/seanHess02-importingCode/: seanHess02-importingCode.cabal  stack.yaml
haskell/haskell/seanHess02-importingCode/src/: Assignment.hs  Main.hs
typeScript/: README.md
typeScript/src/: helloWorld.js  tsconfig.json
