name:                seanHess02-importingCode
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/klevstul/helloHaskell/tree/master/haskell/seanHess02-importingCode
license:             BSD3
license-file:        LICENSE
author:              frode klevstul
maintainer:          frode at klevstul dot com
copyright:           klevstul.com
category:            tutorial
build-type:          Simple
cabal-version:       >=1.10

executable seanHess02-importingCode
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       json
